# adbproxy-rs

./: Cargo.toml  README.md  adb_setup.ps1  adb_setup.sh
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-08-adb-proxy-phase1-release.md
src/: auth.rs  backend.rs  config.rs  hub.rs  lib.rs  local.rs  main.rs  protocol.rs  registry.rs  session.rs
tests/: adb_setup_test.ps1  adb_setup_test.sh  hub.rs  proxy.rs
