[package]
name = "adb-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Transparent TCP proxy for remote adb server access"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
