[package]
name = "adb-proxy"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "Transparent TCP proxy and local adb-hub aggregator for remote adb access"

[[bin]]
name = "adb-proxy"
path = "src/main.rs"

[[bin]]
name = "adb-hub"
path = "src/bin/adb-hub.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
